# switch_games

./: .gitignore  LICENSE  README.md  deploy_web.mjs  index.html  package-lock.json  package.json  robots.txt  svelte.config.js  vite.config.js
.github/workflows/: release.yml
_app/: version.json
_app/immutable/assets/: 0.CDTbkTRS.css  2.DZm0_t29.css
_app/immutable/chunks/: 2S5Wtyaf.js  BjHnlxCG.js  CZsN38Y3.js  DHsFD3EF.js  DHvw-ZU_.js  DUG1ZeDn.js  DX4DBqp3.js  T9NWmdkr.js  wwe_tK0g.js
_app/immutable/entry/: app.apmjlRub.js  start.D0t6Ghbt.js
_app/immutable/nodes/: 0.Dfd4Cs2s.js  1.DGOCeGSY.js  2.DZSwyE3E.js
scripts/: bump-version.mjs
src/: app.css  app.html  app.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: constants.ts  environment.ts  imageCache.ts  types.ts
src/lib/components/: CachedImage.svelte  FilterBar.svelte  GameGrid.svelte  GameTable.svelte  Header.svelte  LinksPanel.svelte  LoadingScreen.svelte
src/lib/stores/: gameStore.svelte.ts  updateStore.svelte.ts
src/routes/: +layout.svelte  +page.svelte
static/: sitemap.xml
